--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,3 +1,7 @@
-<div>
-
-</div>
+<main id="index-main">
+  <div>
+    <img src='/images/beer.png' alt='' />
+  </div>
+  <a href='/beers'>Check the Beers!</a><a href='/random-beer'>Check a Random
+    Beer!</a>
+</main>
