--- a/views/random-beer.hbs
+++ b/views/random-beer.hbs
@@ -1,8 +1,8 @@
 
-<main class="random-beer-holding">
+<main class="full-beer-holding">
   {{#with beer}}
-  <img src={{image_url}}  alt="random beer" class="random-beer-img">
-  <div class="beers-holding random-holding">
+  <img src={{image_url}}  alt="full beer" class="full-beer-img">
+  <div class="beers-holding full-holding">
       
             {{> beerpartial this}}
                 <h5><strong>Food Pairing</strong></h5>  
